[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Nihal Singh <nihalsinsin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.9.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
